--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.9",
+    "debug": "^4.3.4",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
