--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
+    "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
